# Qt_2D_Game

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-fixed.yml  build.yml  manual-release.yml  quick-build.yml
assets/: assets.qrc
src/: MyGame.cpp  MyGame.h  mainwindow.ui
src/Items/: Item.cpp  Item.h  Mountable.cpp  Mountable.h  Platform.cpp  Platform.h
src/Items/Armors/: Armor.h  BodyArmor.cpp  BodyArmor.h  FlamebreakerArmor.cpp  FlamebreakerArmor.h  OldShirt.cpp
src/Items/Characters/: Character.cpp  Character.h  Hero.cpp  Hero.h  Link.cpp
src/Items/HeadEquipments/: CapOfTheCharacter.cpp  CapOfTheCharacter.h  CapOfTheHero.cpp  HeadEquipment.h
src/Items/LegEquipments/: CharacterTrousers.cpp  CharacterTrousers.h  LegEquipment.h  WellWornTrousers.cpp
src/Items/Maps/: Battlefield.cpp  Battlefield.h
src/Items/Medicines/: Adrenaline.cpp  Adrenaline.h  Bandage.cpp  Bandage.h  Medicine.cpp  Medicine.h  Medkit.cpp  Medkit.h
src/Items/Weapons/: Ball.cpp  Ball.h  Bullet.cpp  Bullet.h  Knife.cpp  Knife.h  Pistol.cpp  Pistol.h  Shotgun.cpp  Shotgun.h  Submachine.cpp  Submachine.h  Weapon.cpp  Weapon.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
